@@ -67,12 +67,12 @@
               </a>
             </li>
             <li>
-              <a href="/trades/order/statistic/" class="addlink" target="_blank">
+              <a href="/orders/ordernum/pivotchart/" class="addlink" target="_blank">
                 订单统计
               </a>
             </li>
             <li>
-              <a href="/orders/ordernum/pivotchart/" class="addlink" target="_blank">
+              <a href="/trades/order/statistic/" class="addlink" target="_blank">
                 订单商品统计
               </a>
             </li>
