@@ -1,3 +1,5 @@
+######### 2013-4-22 ###########
+alter table shop_monitor_systemconfig add column normal_print_limit tinyint(1) NOT NULL;
 ######### 2013-4-10  ##########
 alter table shop_trades_mergetrade add column is_locked tinyint(1) NOT NULL;
 alter table shop_monitor_systemconfig add column per_request_num int(11) DEFAULT NULL;
